# lexgraph-legal-rag

./: .dockerignore  .editorconfig  .env.example  .env.security.example  .pre-commit-config.yaml  =3.12.0  =5.9.0  ADVANCED_AUTOMATION.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_MODERNIZATION.md  AUTONOMOUS_BACKLOG_SYSTEM.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_VALUE_DISCOVERY_IMPLEMENTATION.md  BACKLOG.md  BIONEURO_PRODUCTION_GUIDE.md  BIONEURO_RESEARCH_PAPER.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  CORS_SECURITY_CONFIG.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.production  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_HYGIENE_IMPLEMENTATION.md  GITHUB_WORKFLOWS_SETUP.md  GOVERNANCE_COMPLIANCE.md  HYGIENE_BOT_README.md  INTELLIGENT_ENHANCEMENTS_README.md  Makefile  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_REPORT.md  (+108 more)
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  security-vulnerability.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci-fast.yml  ci.yml  cicd.yml  dependencies.yml  dependency-update.yml  release.yml  repository-hygiene.yml  security.yml
.terragon/: autonomous-executor.py  config.json  config.yaml  continuous-value-loop.sh  simple-discovery-engine.py  value-discovery-engine.py  value-metrics.json
demo_documents/: contract1.txt  contract2.txt  statute.txt
deployment/: Dockerfile.prod  deployment_report_20250808_014451.json
deployment/bioneuro-production/: Dockerfile  bioneuro_alerts.yml  deploy.sh  docker-compose.yml  kubernetes.yml  prometheus.yml
deployment/config/: app_config.json  logging_config.json
deployment/docs/: operations_runbook.md  production_deployment_guide.md
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network_policy.yaml  pod_disruption_budget.yaml  secret.yaml  service.yaml
deployment/migrations/: 001_create_initial_tables.sql  002_add_search_indexes.sql  run_migrations.py
deployment/monitoring/: grafana_dashboard.json  prometheus_alerts.yml
deployment/package/: deploy.sh  deployment_manifest.json
deployment/scripts/: deploy_development.sh  deploy_production.sh  deploy_staging.sh  rollback_development.sh  rollback_production.sh  rollback_staging.sh
docs/: ADVANCED_OPTIMIZATION_SUMMARY.md  ADVANCED_WORKFLOW_SETUP.md  CIRCUIT_BREAKER_MONITORING.md  CIRCUIT_BREAKER_OPERATIONS.md  CIRCUIT_BREAKER_PATTERN.md  CIRCUIT_BREAKER_TROUBLESHOOTING.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  ROADMAP.md  SDLC_IMPLEMENTATION_SUMMARY.md  SETUP_REQUIRED.md  TESTING.md  WORKFLOW_SETUP_GUIDE.md
docs/adr/: 001-multi-agent-architecture.md  002-faiss-vector-search.md  003-fastapi-gateway.md  004-prometheus-monitoring.md  README.md
docs/github-workflows-setup/: IMPLEMENTATION_GUIDE.md  README.md  ci.yml
docs/guides/: API_GUIDE.md  USER_GUIDE.md
docs/runbooks/: README.md  health-check-troubleshooting.md
docs/status/: autonomous_execution_metrics_2025-07-26_cycle3.json  autonomous_execution_report_2025-07-26.md  autonomous_execution_report_2025-07-26_cycle2.md  autonomous_execution_report_2025-07-26_cycle3.md  autonomous_execution_report_2025-07-27_cycle4.md  status_20250725_050000.json  status_20250726_122801.json
docs/workflows/: README.md  cd.yml  ci.yml  codeql-config.yml  release.yml  security.yml
docs/workflows-ready-to-deploy/: README.md  advanced-performance.yml  advanced-security.yml  intelligent-deployment.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/development/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  service.yaml
k8s/production/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  service.yaml
k8s/staging/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  service.yaml
monitoring/: alerting.env.example  alerts.rules.yml  lexgraph_alerts.yml  prometheus.yml
scripts/: health_dashboard.py  metrics_collection.py  repository_maintenance.py
security/: pod_security_policy.yaml  rbac.yaml
src/lexgraph_legal_rag/: __init__.py  adaptive_monitoring.py  (+58 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_add-core-logic-for-multi-agent-architecture-recursive-graph-of-specialized-tools-retriever-summarizer-clause-explainer-that-intelligently-decide-when-to-call-one-another.py  test_alerting.py  test_api_additional_coverage.py  test_api_auth.py  test_api_comprehensive.py  test_api_coverage_boost.py  test_api_logging.py  test_auth_comprehensive.py  test_batch_processing_optimization.py  test_bioneuro_olfactory_fusion.py  test_bioneuro_optimization.py  test_cache_comprehensive.py  test_cache_direct.py  test_cache_focused.py  test_cache_standalone.py  test_circuit_breaker_documentation.py  test_config_coverage.py  test_config_validation.py  test_context_reasoner.py  test_correlation_ids.py  test_cors_security.py  test_default-version-fallback.py  test_define-versioning-scheme.py  test_document-versioning-guidelines.py  test_document_pipeline_comprehensive.py  test_document_pipeline_fixed.py  test_document_pipeline_working.py  test_empty_search.py  test_exceptions.py  test_faiss_index.py  test_faiss_index_comprehensive.py  test_health_check_comprehensive.py  test_health_endpoints.py  test_http_client.py  test_http_client_comprehensive.py  test_implement-scaffolding-for-multi-agent-architecture-recursive-graph-of-specialized-tools-retriever-summarizer-clause-explainer-that-intelligently-decide-when-to-call-one-another.py  test_implement-versioned-routing.py  test_integration_api.py  (+27 more)
(+7 files in other folders)
